--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,14 @@ li.game span {
 }
 
 li.game-top {
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid #ff0000;
 }
 
 li.game-spacer {
-    border-right: 1px solid #aaa;
+    border-right: 1px solid #4c67ff;
     min-height: 40px;
 }
 
 li.game-bottom {
-    border-top: 1px solid #aaa;
+    border-top: 1px solid #2add39;
 }
